--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -16,7 +16,7 @@
     </div>
   </div>
 </div>
-
+<div class="clearfix"></div>
 <!-- Contact Info -->
 <div class="contactInfo">
   <div class="container">
