--- a/src/app/views/contact/contact.component.scss
+++ b/src/app/views/contact/contact.component.scss
@@ -6,6 +6,8 @@ $mainFont: "Poppins", sans-serif;
 }
 
 .contactMap {
+  height: 45vh;
+  overflow: hidden;
   .col-md-5 {
     background: url("../../../assets/Backrounds/contactBG.jpg") center center;
     background-size: cover;
@@ -20,7 +22,7 @@ $mainFont: "Poppins", sans-serif;
     background: rgb(61, 61, 61, 0.7);
     width: 100%;
     height: 100%;
-    padding: 60px;
+    padding: 40px;
   }
 
   h1 {
@@ -36,9 +38,12 @@ $mainFont: "Poppins", sans-serif;
     margin-top: 30px;
   }
   iframe {
-    height: 45vh;
     width: 100%;
   }
+}
+
+.clearfix{
+  clear: both;
 }
 
 .contactInfo {
